[project]
name = "aroid"
version = "0.1.0"
description = "AROID: Improving Adversarial Robustness Through Online Instance-Wise Data Augmentation. IJCV 2024."
readme = "README.md"
authors = [
    { name = "Lin Li", email = "lin.3.li@kcl.ac.uk" },
    { name = "Jianing Qiu", email = "jianing.qiu17@imperial.ac.uk" },
    { name = "Michael Spratling", email = "michael.spratling@kcl.ac.uk" },
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "addict>=2.4.0",
    "autoattack",
    "filelock>=3.16.1",
    "mergedeep>=1.3.4",
    "openpyxl>=3.1.5",
    "pynvml>=11.5.3",
    "timm==0.5.4",
    "torch==1.11.*",
    "torchattacks>=3.5.1",
    "torchvision==0.12.*",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
autoattack = { git = "https://github.com/fra31/auto-attack" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
